--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Flask==2.2.2
 Flask-SQLAlchemy==3.0.3
 gunicorn==20.1.0
+python-dotenv==1.0.1
 
 # Dependencies pulled in by Flask
 click==8.1.3
@@ -11,7 +12,6 @@ Werkzeug==2.2.2
 
 # SQLAlchemy dependency
 SQLAlchemy==2.0.3
-greenlet==2.0.2
 
 # Python typing
 typing_extensions==4.4.0
